Aplicativo instalavel com mvn clean package.